apps/localizer/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: localizer-api-service
  namespace: localizer
spec:
  selector:
    app: localizer-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
